examen_parser.output
Estado 25 conflictos: 2 desplazamiento/reducción
Estado 42 conflictos: 2 desplazamiento/reducción
Estado 45 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: input $end

    1 input: statement_list

    2 statement_list: %empty
    3               | statement_list statement

    4 statement: TK_PRINT '(' expres_Total ')' TK_PUNTOCOMA
    5          | assignment_stmt
    6          | if_stmt
    7          | expression TK_PUNTOCOMA
    8          | metodos_statement

    9 metodos_statement: TK_LET TK_IDENTIFICADOR '(' identificador_list ')' TK_IGUAL TK_BEGIN statement_list TK_END

   10 identificador_list: %empty
   11                   | identificador_list TK_IDENTIFICADOR
   12                   | TK_COMIA

   13 if_stmt: TK_IF '(' expres_Total ')' TK_BEGIN statement_list TK_END

   14 assignment_stmt: TK_LET TK_IDENTIFICADOR TK_IGUAL expres_Total TK_PUNTOCOMA

   15 expres_Total: expres_Total TK_IGUALIGUAL relacionalExpre
   16             | relacionalExpre

   17 relacionalExpre: relacionalExpre TK_MAYOR expression
   18                | relacionalExpre TK_MENOR expres_Total
   19                | expression

   20 expression: expression TK_MAS factor
   21           | expression TK_MENOS factor
   22           | factor

   23 factor: factor TK_MULTI term
   24       | factor TK_DIVI term
   25       | term

   26 term: TK_NUMBER
   27     | TK_IDENTIFICADOR


Terminales con las reglas donde aparecen

    $end (0) 0
    '(' (40) 4 9 13
    ')' (41) 4 9 13
    error (256)
    TK_PRINT (258) 4
    TK_PUNTOCOMA (259) 4 7 14
    TK_MAS (260) 20
    TK_MENOS (261) 21
    TK_MULTI (262) 23
    TK_DIVI (263) 24
    TK_IGUAL (264) 9 14
    TK_LET (265) 9 14
    TK_IF (266) 13
    TK_BEGIN (267) 9 13
    TK_END (268) 9 13
    TK_IGUALIGUAL (269) 15
    TK_MAYOR (270) 17
    TK_MENOR (271) 18
    TK_COMIA (272) 12
    TK_NUMBER <int_t> (273) 26
    TK_IDENTIFICADOR <string_t> (274) 9 11 14 27


No terminales con las reglas donde aparecen

    $accept (22)
        on left: 0
    input (23)
        on left: 1
        on right: 0
    statement_list (24)
        on left: 2 3
        on right: 1 3 9 13
    statement (25)
        on left: 4 5 6 7 8
        on right: 3
    metodos_statement (26)
        on left: 9
        on right: 8
    identificador_list (27)
        on left: 10 11 12
        on right: 9 11
    if_stmt (28)
        on left: 13
        on right: 6
    assignment_stmt <int_t> (29)
        on left: 14
        on right: 5
    expres_Total <int_t> (30)
        on left: 15 16
        on right: 4 13 14 15 18
    relacionalExpre <int_t> (31)
        on left: 17 18 19
        on right: 15 16 17 18
    expression <int_t> (32)
        on left: 20 21 22
        on right: 7 17 19 20 21
    factor <int_t> (33)
        on left: 23 24 25
        on right: 20 21 22 23 24
    term <int_t> (34)
        on left: 26 27
        on right: 23 24 25


Estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 2 (statement_list)

    input           ir al estado 1
    statement_list  ir al estado 2


Estado 1

    0 $accept: input . $end

    $end  desplazar e ir al estado 3


Estado 2

    1 input: statement_list .
    3 statement_list: statement_list . statement

    TK_PRINT          desplazar e ir al estado 4
    TK_LET            desplazar e ir al estado 5
    TK_IF             desplazar e ir al estado 6
    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    $default  reduce usando la regla 1 (input)

    statement          ir al estado 9
    metodos_statement  ir al estado 10
    if_stmt            ir al estado 11
    assignment_stmt    ir al estado 12
    expression         ir al estado 13
    factor             ir al estado 14
    term               ir al estado 15


Estado 3

    0 $accept: input $end .

    $default  aceptar


Estado 4

    4 statement: TK_PRINT . '(' expres_Total ')' TK_PUNTOCOMA

    '('  desplazar e ir al estado 16


Estado 5

    9 metodos_statement: TK_LET . TK_IDENTIFICADOR '(' identificador_list ')' TK_IGUAL TK_BEGIN statement_list TK_END
   14 assignment_stmt: TK_LET . TK_IDENTIFICADOR TK_IGUAL expres_Total TK_PUNTOCOMA

    TK_IDENTIFICADOR  desplazar e ir al estado 17


Estado 6

   13 if_stmt: TK_IF . '(' expres_Total ')' TK_BEGIN statement_list TK_END

    '('  desplazar e ir al estado 18


Estado 7

   26 term: TK_NUMBER .

    $default  reduce usando la regla 26 (term)


Estado 8

   27 term: TK_IDENTIFICADOR .

    $default  reduce usando la regla 27 (term)


Estado 9

    3 statement_list: statement_list statement .

    $default  reduce usando la regla 3 (statement_list)


Estado 10

    8 statement: metodos_statement .

    $default  reduce usando la regla 8 (statement)


Estado 11

    6 statement: if_stmt .

    $default  reduce usando la regla 6 (statement)


Estado 12

    5 statement: assignment_stmt .

    $default  reduce usando la regla 5 (statement)


Estado 13

    7 statement: expression . TK_PUNTOCOMA
   20 expression: expression . TK_MAS factor
   21           | expression . TK_MENOS factor

    TK_PUNTOCOMA  desplazar e ir al estado 19
    TK_MAS        desplazar e ir al estado 20
    TK_MENOS      desplazar e ir al estado 21


Estado 14

   22 expression: factor .
   23 factor: factor . TK_MULTI term
   24       | factor . TK_DIVI term

    TK_MULTI  desplazar e ir al estado 22
    TK_DIVI   desplazar e ir al estado 23

    $default  reduce usando la regla 22 (expression)


Estado 15

   25 factor: term .

    $default  reduce usando la regla 25 (factor)


Estado 16

    4 statement: TK_PRINT '(' . expres_Total ')' TK_PUNTOCOMA

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    expres_Total     ir al estado 24
    relacionalExpre  ir al estado 25
    expression       ir al estado 26
    factor           ir al estado 14
    term             ir al estado 15


Estado 17

    9 metodos_statement: TK_LET TK_IDENTIFICADOR . '(' identificador_list ')' TK_IGUAL TK_BEGIN statement_list TK_END
   14 assignment_stmt: TK_LET TK_IDENTIFICADOR . TK_IGUAL expres_Total TK_PUNTOCOMA

    TK_IGUAL  desplazar e ir al estado 27
    '('       desplazar e ir al estado 28


Estado 18

   13 if_stmt: TK_IF '(' . expres_Total ')' TK_BEGIN statement_list TK_END

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    expres_Total     ir al estado 29
    relacionalExpre  ir al estado 25
    expression       ir al estado 26
    factor           ir al estado 14
    term             ir al estado 15


Estado 19

    7 statement: expression TK_PUNTOCOMA .

    $default  reduce usando la regla 7 (statement)


Estado 20

   20 expression: expression TK_MAS . factor

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    factor  ir al estado 30
    term    ir al estado 15


Estado 21

   21 expression: expression TK_MENOS . factor

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    factor  ir al estado 31
    term    ir al estado 15


Estado 22

   23 factor: factor TK_MULTI . term

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    term  ir al estado 32


Estado 23

   24 factor: factor TK_DIVI . term

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    term  ir al estado 33


Estado 24

    4 statement: TK_PRINT '(' expres_Total . ')' TK_PUNTOCOMA
   15 expres_Total: expres_Total . TK_IGUALIGUAL relacionalExpre

    TK_IGUALIGUAL  desplazar e ir al estado 34
    ')'            desplazar e ir al estado 35


Estado 25

   16 expres_Total: relacionalExpre .
   17 relacionalExpre: relacionalExpre . TK_MAYOR expression
   18                | relacionalExpre . TK_MENOR expres_Total

    TK_MAYOR  desplazar e ir al estado 36
    TK_MENOR  desplazar e ir al estado 37

    TK_MAYOR  [reduce usando la regla 16 (expres_Total)]
    TK_MENOR  [reduce usando la regla 16 (expres_Total)]
    $default  reduce usando la regla 16 (expres_Total)


Estado 26

   19 relacionalExpre: expression .
   20 expression: expression . TK_MAS factor
   21           | expression . TK_MENOS factor

    TK_MAS    desplazar e ir al estado 20
    TK_MENOS  desplazar e ir al estado 21

    $default  reduce usando la regla 19 (relacionalExpre)


Estado 27

   14 assignment_stmt: TK_LET TK_IDENTIFICADOR TK_IGUAL . expres_Total TK_PUNTOCOMA

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    expres_Total     ir al estado 38
    relacionalExpre  ir al estado 25
    expression       ir al estado 26
    factor           ir al estado 14
    term             ir al estado 15


Estado 28

    9 metodos_statement: TK_LET TK_IDENTIFICADOR '(' . identificador_list ')' TK_IGUAL TK_BEGIN statement_list TK_END

    TK_COMIA  desplazar e ir al estado 39

    $default  reduce usando la regla 10 (identificador_list)

    identificador_list  ir al estado 40


Estado 29

   13 if_stmt: TK_IF '(' expres_Total . ')' TK_BEGIN statement_list TK_END
   15 expres_Total: expres_Total . TK_IGUALIGUAL relacionalExpre

    TK_IGUALIGUAL  desplazar e ir al estado 34
    ')'            desplazar e ir al estado 41


Estado 30

   20 expression: expression TK_MAS factor .
   23 factor: factor . TK_MULTI term
   24       | factor . TK_DIVI term

    TK_MULTI  desplazar e ir al estado 22
    TK_DIVI   desplazar e ir al estado 23

    $default  reduce usando la regla 20 (expression)


Estado 31

   21 expression: expression TK_MENOS factor .
   23 factor: factor . TK_MULTI term
   24       | factor . TK_DIVI term

    TK_MULTI  desplazar e ir al estado 22
    TK_DIVI   desplazar e ir al estado 23

    $default  reduce usando la regla 21 (expression)


Estado 32

   23 factor: factor TK_MULTI term .

    $default  reduce usando la regla 23 (factor)


Estado 33

   24 factor: factor TK_DIVI term .

    $default  reduce usando la regla 24 (factor)


Estado 34

   15 expres_Total: expres_Total TK_IGUALIGUAL . relacionalExpre

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    relacionalExpre  ir al estado 42
    expression       ir al estado 26
    factor           ir al estado 14
    term             ir al estado 15


Estado 35

    4 statement: TK_PRINT '(' expres_Total ')' . TK_PUNTOCOMA

    TK_PUNTOCOMA  desplazar e ir al estado 43


Estado 36

   17 relacionalExpre: relacionalExpre TK_MAYOR . expression

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    expression  ir al estado 44
    factor      ir al estado 14
    term        ir al estado 15


Estado 37

   18 relacionalExpre: relacionalExpre TK_MENOR . expres_Total

    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    expres_Total     ir al estado 45
    relacionalExpre  ir al estado 25
    expression       ir al estado 26
    factor           ir al estado 14
    term             ir al estado 15


Estado 38

   14 assignment_stmt: TK_LET TK_IDENTIFICADOR TK_IGUAL expres_Total . TK_PUNTOCOMA
   15 expres_Total: expres_Total . TK_IGUALIGUAL relacionalExpre

    TK_PUNTOCOMA   desplazar e ir al estado 46
    TK_IGUALIGUAL  desplazar e ir al estado 34


Estado 39

   12 identificador_list: TK_COMIA .

    $default  reduce usando la regla 12 (identificador_list)


Estado 40

    9 metodos_statement: TK_LET TK_IDENTIFICADOR '(' identificador_list . ')' TK_IGUAL TK_BEGIN statement_list TK_END
   11 identificador_list: identificador_list . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  desplazar e ir al estado 47
    ')'               desplazar e ir al estado 48


Estado 41

   13 if_stmt: TK_IF '(' expres_Total ')' . TK_BEGIN statement_list TK_END

    TK_BEGIN  desplazar e ir al estado 49


Estado 42

   15 expres_Total: expres_Total TK_IGUALIGUAL relacionalExpre .
   17 relacionalExpre: relacionalExpre . TK_MAYOR expression
   18                | relacionalExpre . TK_MENOR expres_Total

    TK_MAYOR  desplazar e ir al estado 36
    TK_MENOR  desplazar e ir al estado 37

    TK_MAYOR  [reduce usando la regla 15 (expres_Total)]
    TK_MENOR  [reduce usando la regla 15 (expres_Total)]
    $default  reduce usando la regla 15 (expres_Total)


Estado 43

    4 statement: TK_PRINT '(' expres_Total ')' TK_PUNTOCOMA .

    $default  reduce usando la regla 4 (statement)


Estado 44

   17 relacionalExpre: relacionalExpre TK_MAYOR expression .
   20 expression: expression . TK_MAS factor
   21           | expression . TK_MENOS factor

    TK_MAS    desplazar e ir al estado 20
    TK_MENOS  desplazar e ir al estado 21

    $default  reduce usando la regla 17 (relacionalExpre)


Estado 45

   15 expres_Total: expres_Total . TK_IGUALIGUAL relacionalExpre
   18 relacionalExpre: relacionalExpre TK_MENOR expres_Total .

    TK_IGUALIGUAL  desplazar e ir al estado 34

    TK_IGUALIGUAL  [reduce usando la regla 18 (relacionalExpre)]
    $default       reduce usando la regla 18 (relacionalExpre)


Estado 46

   14 assignment_stmt: TK_LET TK_IDENTIFICADOR TK_IGUAL expres_Total TK_PUNTOCOMA .

    $default  reduce usando la regla 14 (assignment_stmt)


Estado 47

   11 identificador_list: identificador_list TK_IDENTIFICADOR .

    $default  reduce usando la regla 11 (identificador_list)


Estado 48

    9 metodos_statement: TK_LET TK_IDENTIFICADOR '(' identificador_list ')' . TK_IGUAL TK_BEGIN statement_list TK_END

    TK_IGUAL  desplazar e ir al estado 50


Estado 49

   13 if_stmt: TK_IF '(' expres_Total ')' TK_BEGIN . statement_list TK_END

    $default  reduce usando la regla 2 (statement_list)

    statement_list  ir al estado 51


Estado 50

    9 metodos_statement: TK_LET TK_IDENTIFICADOR '(' identificador_list ')' TK_IGUAL . TK_BEGIN statement_list TK_END

    TK_BEGIN  desplazar e ir al estado 52


Estado 51

    3 statement_list: statement_list . statement
   13 if_stmt: TK_IF '(' expres_Total ')' TK_BEGIN statement_list . TK_END

    TK_PRINT          desplazar e ir al estado 4
    TK_LET            desplazar e ir al estado 5
    TK_IF             desplazar e ir al estado 6
    TK_END            desplazar e ir al estado 53
    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    statement          ir al estado 9
    metodos_statement  ir al estado 10
    if_stmt            ir al estado 11
    assignment_stmt    ir al estado 12
    expression         ir al estado 13
    factor             ir al estado 14
    term               ir al estado 15


Estado 52

    9 metodos_statement: TK_LET TK_IDENTIFICADOR '(' identificador_list ')' TK_IGUAL TK_BEGIN . statement_list TK_END

    $default  reduce usando la regla 2 (statement_list)

    statement_list  ir al estado 54


Estado 53

   13 if_stmt: TK_IF '(' expres_Total ')' TK_BEGIN statement_list TK_END .

    $default  reduce usando la regla 13 (if_stmt)


Estado 54

    3 statement_list: statement_list . statement
    9 metodos_statement: TK_LET TK_IDENTIFICADOR '(' identificador_list ')' TK_IGUAL TK_BEGIN statement_list . TK_END

    TK_PRINT          desplazar e ir al estado 4
    TK_LET            desplazar e ir al estado 5
    TK_IF             desplazar e ir al estado 6
    TK_END            desplazar e ir al estado 55
    TK_NUMBER         desplazar e ir al estado 7
    TK_IDENTIFICADOR  desplazar e ir al estado 8

    statement          ir al estado 9
    metodos_statement  ir al estado 10
    if_stmt            ir al estado 11
    assignment_stmt    ir al estado 12
    expression         ir al estado 13
    factor             ir al estado 14
    term               ir al estado 15


Estado 55

    9 metodos_statement: TK_LET TK_IDENTIFICADOR '(' identificador_list ')' TK_IGUAL TK_BEGIN statement_list TK_END .

    $default  reduce usando la regla 9 (metodos_statement)
